add fullscreen stuff

--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,6 +1,6 @@
 displayName=Fullscreen
 author=dekvall
-support=
+support=https://github.com/dekvall/runelite-fullscreen
 description=RuneLite, but in fullscreen.
-tags=
+tags=window,full,screen,all,monitor
 plugins=dekvall.fullscreen.FullscreenPlugin
