--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
-build/
+.gradle
+build
 .idea/
-.gradle/
+.project
+.settings/
+.classpath
+nbactions.xml
+nb-configuration.xml
+nbproject/
+.DS_Store
