--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,6 +1,6 @@
 displayName=Fullscreen
-author=dekvall
+author=dekvall,LouisHong
 support=https://github.com/dekvall/runelite-fullscreen
-description=RuneLite, but in fullscreen.
-tags=window,full,screen,all,monitor
-plugins=dekvall.fullscreen.FullscreenPlugin
+description=Fullscreen for RuneLite.
+tags=fullscreen,borderless,windowed,quality of life,QOL,monitor,full,screen,all
+plugins=com.borderlessfullscreen.FullscreenPlugin
